--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,13 +5,30 @@ license = "Apache-2.0 OR MIT"
 edition = "2021"
 
 [dependencies]
-serde_json = "^1"
-serde = { version = "^1", default-features = false }
 indexmap = { version = "2.2.3", optional = true }
+itoa = "1.0"
 memchr = { version = "2", default-features = false }
+ryu = "1.0"
+serde = { version = "1.0.194", default-features = false }
 
 [dev-dependencies]
+automod = "1.0.11"
+indoc = "2.0.2"
+ref-cast = "1.0.18"
+rustversion = "1.0.13"
 serde = { version = "1.0.194", features = ["derive"] }
+serde_bytes = "0.11.10"
+serde_derive = "1.0.166"
+serde_stacker = "0.1.8"
+trybuild = { version = "1.0.81", features = ["diff"] }
+
+[package.metadata.docs.rs]
+features = ["preserve_order", "raw_value", "unbounded_depth"]
+targets = ["x86_64-unknown-linux-gnu"]
+rustdoc-args = ["--generate-link-to-definition"]
+
+[package.metadata.playground]
+features = ["raw_value"]
 
 ### FEATURES #################################################################
 
